# EasyCue

./: .gitignore  README.md  generate-icons.js  generate-real-icons.js  package.json  pnpm-lock.yaml  start.sh  test.html
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
